# market-stream-rpc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  README  README.md
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: code-development-issue.md  code-development-task.md  feature_request.md  implementation-template.md  test-perform.md  unit-test-task.md  unit-test-template.md
.github/workflows/: benchmark.yaml  build-docker.yaml  build_and_test.yaml  codecov.yaml  codecov_ci.yaml  common_checks.yaml  linter.yaml  temp.yaml
.github/worklflows/: codecov.yaml
cmake_deps/: Dependencies.cmake
config/: config.yaml  dlt.conf
dev/bench/: data.js
docker/: ci-container.Dockerfile  dev-container.Dockerfile
docs/diagrams/: aggtrade_stream_server_sequence.puml  binance_classes.puml  binance_stream_connector_sequence.puml  common_classes.puml  general_classes.puml  grpc_server_classes.puml  startup_sequence.puml
proto/v1/: market.proto
src/: main.cpp
src/common/config_service/: CMakeLists.txt  config_service_builder.h  i_config_service.h  i_config_service.h.orig
src/common/config_service/tests/ut/: CMakeLists.txt  test_config_service_builder.cpp
src/common/logger/: CMakeLists.txt  DltConfig.h  dlt_config.h  dlt_logger.cpp  dlt_logger.h  dlt_logger_config.cpp  dlt_logger_config.cpp.orig  dlt_logger_config.h  dlt_logger_config.h.orig  logger_test.cpp
src/common/logger/tests/benchmark/: CMakeLists.txt  benchmark_logger.cpp
src/common/logger/tests/integration/: CMakeLists.txt  logger_test.cpp
src/common/logger/tests/ut/: CMakeLists.txt  test_dlt_logger_config.cpp  test_logger.cpp
src/common/logger/tests/ut/resources/: ill_format_config.yaml  no_app_id.yaml  no_context.yaml  no_context_descr.yaml  no_context_id.yaml  no_context_sequence.yaml  no_file_path.yaml  no_logger.yaml  no_mode.yaml  normal_config.yaml
src/common/spsc_queue/: CMakeLists.txt  spsc_lock_free_queue.h
src/common/spsc_queue/tests/benchmark/: CMakeLists.txt  benchmark_spsc_queue.cpp
src/common/spsc_queue/tests/ut/: CMakeLists.txt  test_lock_free_queue.cpp
tools/: build.sh  build_and_run_benchmark_tests.sh  build_and_run_lint.sh  build_and_run_tests.sh  env.sh  install_and_build_docker.sh  install_dlt.sh  run_lint.sh  update_submodules.sh
